# software-rasterizer

./: makefile
Projects/Labb1/code/: TextureResource.cc  exampleapp.cc  exampleapp.h  halfedge.cc  halfedge.h  main.cc  math.h
Projects/Rast/code/: #MeshResource.cc#  #exampleapp.cc#  GraphicsNode.cc  GraphicsNode.cc~  GraphicsNode.h  GraphicsNode.h~  LightNode.cc  LightNode.cc~  LightNode.h  LightNode.h~  MeshResource.cc  MeshResource.cc~  MeshResource.h  MeshResource.h~  Render.cc  Render.cc~  Render.h  Render.h~  ShaderObject.cc  ShaderObject.cc~  ShaderObject.h  ShaderObject.h~  TextureResource.cc  TextureResource.cc~  TextureResource.h  TextureResource.h~  exampleapp.cc  exampleapp.cc~  exampleapp.h  exampleapp.h~  fs.glsl  fs.txt  main.cc  math.h~  vs.txt
Projects/Rast/matlib/: CMakeLists.txt  math.h
engine/: config.cc
engine/core/: app.cc  app.h
engine/render/: window.cc  window.h
